VME-695: Fix for building image url in blog articles. Blog excerpt in page builder is no more WYSIWYG now it is textarea. Update style for article author in blog: block alignment. Incorrect check for tags in blog-list-item template has been removed.

--- a/layout/src/assets/sass/blocks/main/page/blog/main.scss
+++ b/layout/src/assets/sass/blocks/main/page/blog/main.scss
@@ -482,7 +482,7 @@
             align-items: center;
             display: flex;
             height: 3rem;
-            margin-top: 0.5rem;
+            margin-top: auto;
 
             &-logo {
                 background: url("/themes/assets/logo.svg") no-repeat scroll 0 0;
